track slide refactor; square not squished search result artwork; other small fixes

--- a/assets/scss/common/_form-elements.scss
+++ b/assets/scss/common/_form-elements.scss
@@ -36,19 +36,19 @@
 		outline: none;
 
 		&::-webkit-input-placeholder {
-		   color: rgba($dark-grey, 0.6);
+		   color: rgba($dark-grey, 0.2);
 		}
 
 		&:-moz-placeholder {
-		   color: rgba($dark-grey, 0.6);
+		   color: rgba($dark-grey, 0.2);
 		}
 
 		&::-moz-placeholder {
-		   color: rgba($dark-grey, 0.6);
+		   color: rgba($dark-grey, 0.2);
 		}
 
 		&:-ms-input-placeholder {
-		   color: rgba($dark-grey, 0.6);
+		   color: rgba($dark-grey, 0.2);
 		}
 	}
 }
